# TheraBotBeta

Desktop/Projects/TheraBot/: .env.example  .gitignore  (+2 more)
Desktop/Projects/TheraBotBeta/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Desktop/Projects/TheraBotBeta/.claude/: settings.local.json
Desktop/Projects/TheraBotBeta/app/: main.py
Desktop/Projects/TheraBotBeta/app/api/: chat.py  health.py  traces.py
Desktop/Projects/TheraBotBeta/app/core/: config.py  dependencies.py  exceptions.py  logging.py
Desktop/Projects/TheraBotBeta/app/models/: agent_state.py  chat.py  session.py  turn_trace.py  user.py
Desktop/Projects/TheraBotBeta/app/services/: chat.py  session_store.py  turn_trace_store.py
Desktop/Projects/TheraBotBeta/app/services/agents/: therapy_agent.py
Desktop/Projects/TheraBotBeta/app/services/llm/: anthropic_provider.py  base.py  cost_tracker.py  openai_provider.py  router.py
Desktop/Projects/TheraBotBeta/app/services/prompts/: experiments.py  pipeline.py  templates.py
Desktop/Projects/TheraBotBeta/data/prompts/: format_long_v1.txt  format_short_v1.txt  identity_clinical_v1.txt  identity_warm_v1.txt  identity_warm_v2.txt  safety_escalation_v1.txt
Desktop/Projects/TheraBotBeta/docs/: architecture.md  cost_quick_reference.md  implementation_example.py  openai_api_comparison.md  project_knowledge.md
Desktop/Projects/TheraBotBeta/scripts/: clean_knowledge.py  compare_models.py  extract_vocabulary.py  seed_knowledge.py  view_traces.py
Desktop/Projects/TheraBotBeta/static/: eval.html  index.html
(+5 files in other folders)
